use dtos in controller, implemented BookService and BookController
